Dockérisation, ajout d'un conteneur CCXT-REST, connexion à ce conteneur plutot qu'à l'API public Kraken.

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
 					<!-- <debug>8000</debug> -->
 					<properties>
 						<swarm.http.port>8182</swarm.http.port>
+						<java.net.preferIPv4Stack>true</java.net.preferIPv4Stack>
 					</properties>
 				</configuration>
 				<executions>
